2008-01-15  Steve Ellcey  <sje@cup.hp.com>

	PR c++/38357
	* g++.dg/template/crash87.C: New test.

2009-01-15  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/37843
	* gcc.target/i386/pr37843-3.c: Replace _Decimal128 with __m128.

2009-01-15  Dodji Seketeli  <dodji@redhat.com>

	PR c++/38636
	* g++.dg/parse/crash50.C: New test.

2009-01-14  Jakub Jelinek  <jakub@redhat.com>

	PR rtl-optimization/38245
	* gcc.dg/pr38245-3.c: New test.
	* gcc.dg/pr38245-3.h: New file.
	* gcc.dg/pr38245-4.c: New file.
	* gcc.dg/pr38364.c: New test.

2009-01-14  Adam Nemet  <anemet@caviumnetworks.com>

	* gcc.target/mips/mips.exp (mips_option_tests(-mips16)): Make the
	sequence PC-relative.

2009-01-14  Mark Mitchell  <mark@codesourcery.com>

	* gcc.target/arm/long-calls-1.c: Tolerate the lack of sibling
	calls and/or PLT markers.
	* gcc.target/arm/long-calls-2.c: Tolerate the lack of sibling
	calls and/or PLT markers.
	* gcc.target/arm/long-calls-3.c: Tolerate the lack of sibling
	calls and/or PLT markers.
	* gcc.target/arm/long-calls-4.c: Tolerate the lack of sibling
	calls and/or PLT markers.

2009-01-14  Daniel Jacobowitz  <dan@codesourcery.com>
	    Nathan Froyd  <froydnj@codesourcery.com>
	    Joseph Myers  <joseph@codesourcery.com>

	* lib/target-supports.exp (check_effective_target_powerpc_spe_nocache):
	New function.
	* gcc.target/powerpc/20030218-1.c: Skip if not powerpc_spe_nocache
	and use consistent CFLAGS.
	* gcc.target/powerpc/20030505.c: Likewise.
	* gcc.target/powerpc/20081204-1.c: Likewise.
	* gcc.target/powerpc/ppc-spe.c: Likewise.
	* gcc.target/powerpc/spe1.c: Likewise.
	* g++.dg/ext/spe1.C: Likewise.
	* g++.dg/other/opaque-1.C: Likewise.
	* g++.dg/other/opaque-2.C: Likewise.
	* g++.dg/other/opaque-3.C: Likewise.

2009-01-14  Mark Mitchell  <mark@codesourcery.com>

	* gcc.dg/vect/vect-105.c: Prevent compiler from hoisting abort
	out of loop.

2009-01-14  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38826
	PR middle-end/38477