@@ -1,3 +1,10 @@
+2009-02-23  Janis Johnson  <janis187@us.ibm.com>
+
+	PR c/33466
+	* gcc.dg/cpp/pr33466.c: New test.
+	* gcc.dg/dfp/pr33466.c: New test.
+	* gcc.dg/fixed-point/pr33466.c: New test.
+
 2008-01-15  Steve Ellcey  <sje@cup.hp.com>
 
 	PR c++/38357
